--- a/lab_2/task_4/Makefile
+++ b/lab_2/task_4/Makefile
@@ -1,5 +1,5 @@
 all: compile run
 compile:
-	gcc array_list.h array_list.c main.c -o ./app.out
+	gcc -w array_list.h array_list.c main.c -o ./app.out
 run: 
 	./app.out 
